# IntelFPGA_AzureOTA

./: README.md
AlgyanOverlay/: overlay_algyan.dtbo  overlay_algyan.dtso  soc_system_algyan.rbf
patch_overlay_dtbo/: overlay.dtbo
quartus_project/: .gitignore
quartus_project/DE10_NANO_SoC_FB/: DE10_NANO_SOC_FB.qsf  DE10_NANO_SOC_FB.sdc  DE10_NANO_SOC_FB.v  soc_system.dtb  soc_system.dts  soc_system.qsys  soc_system.sopcinfo  vga_pll.xml
quartus_project/DE10_NANO_SoC_FB/hps_isw_handoff/soc_system_hps_0/: id
quartus_project/DE10_NANO_SoC_FB/ip/vga_pll/: vga_pll.bsf  vga_pll.cmp  vga_pll.ppf  vga_pll.sip  vga_pll.v
quartus_project/DE10_NANO_SoC_FB/ip/vga_pll/vga_pll/: vga_pll_0002.v
quartus_project/DE10_NANO_SoC_FB/ip/vga_pll/vga_pll_sim/: vga_pll.vo
quartus_project/DE10_NANO_SoC_FB/output_files/: soc_system.rbf
quartus_project/DE10_NANO_SoC_FB/soc_system/: soc_system.bsf  soc_system.cmp  soc_system.csv  soc_system.html  soc_system.spd  soc_system.xml  soc_system_bb.v  soc_system_inst.v  soc_system_inst.vhd
quartus_project/DE10_NANO_SoC_FB/soc_system/synthesis/: soc_system.debuginfo  soc_system.qip  soc_system.v
quartus_project/DE10_NANO_SoC_FB/soc_system/synthesis/submodules/: hps_sdram.v  hps_sdram_p0_clock_pair_generator.v  hps_sdram_p0_parameters.tcl  soc_system_dipsw_pio.v  soc_system_f2sdram_only_master.v  soc_system_hps_0.v  soc_system_hps_0_fpga_interfaces.sv  soc_system_hps_0_hps_io.v  soc_system_led_pio.v  soc_system_mm_interconnect_0.v  soc_system_mm_interconnect_0_cmd_demux.sv  soc_system_mm_interconnect_0_cmd_demux_001.sv  soc_system_mm_interconnect_0_cmd_mux.sv  soc_system_mm_interconnect_0_router.sv  soc_system_mm_interconnect_0_router_001.sv  soc_system_mm_interconnect_0_router_002.sv  soc_system_mm_interconnect_0_rsp_mux.sv  soc_system_mm_interconnect_1.v  soc_system_mm_interconnect_1_avalon_st_adapter.v  (+37 more)
vscode_project/G-Sensor/EdgeSolution/: deployment.debug.template.json  deployment.template.json
vscode_project/G-Sensor/EdgeSolution/modules/DE10NanoGSensor/: ADXL345.c  ADXL345.h  CMakeLists.txt  Dockerfile.arm32v7  iothub_client_sample_module_sender.c  main.c  module.json
vscode_project/L-Chika/EdgeSolution/: deployment.debug.template.json  deployment.template.json
(+13 files in other folders)
